# quick-deploy

./: .dockerignore  .gitignore  Cargo.toml  README.md  build.Dockerfile  create-image-builder.Dockerfile  create-image-builder.sh  deploy-discount-app.sh  deploy-hello-app.sh  deploy.sh  dev.sh  podman.sh  request .http
env/: app.env  frontend.env
src/: main.rs
src/env/: app.rs  frontend.rs  mod.rs
src/handlers/frontend/: upload.rs
src/routes/: api.rs  root.rs
